# to-do-list

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
adapter/database/: config.py  db.py
adapter/database/migrations/: env.py
adapter/database/migrations/versions/: dac75981bd7b_create.py
adapter/database/models/: auth.py  todo.py
adapter/db/: factory.py
adapter/db/models/: todo.py
api/: main.py
api/routers/: todo.py
api/routes/: todo.py
api/schemas/: todo.py
docker/: app.sh
src/adapter/auth/: backend_config.py  bearer.py  jwt_config.py  manager.py
src/adapter/database/: config.py  db.py
src/adapter/database/migrations/: env.py
src/adapter/database/migrations/versions/: 9550d129cf50_add_description_to_todo_model.py  d7eb6e8d81fd_create_user_model.py  e0c033b04caa_create2.py
src/adapter/database/models/: auth.py  todo.py
src/adapter/database/repo/: todo.py
src/api/: main.py
src/api/routers/: __init__.py  auth.py  todo.py
src/api/schemas/: auth.py  todo.py
src/api/services/: todo.py
tests/: conftest.py  env.py  test_auth.py  test_todo.py
