[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Azamat <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
