[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Azamat <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
psycopg = {extras = ["binary"], version = "^3.1.10"}
sqlalchemy = "^2.0.21"
fastapi = {extras = ["all"], version = "^0.103.1"}
install = "^1.3.5"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]