[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["meden <medenovvaza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.103.2"}
alembic = "^1.12.0"
asyncpg = "^0.28.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.2"}
ruff = "^0.0.292"
sqlalchemy = {extras = ["mypy"], version = "^2.0.22"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"


[tool.poetry.group.typecheck.dependencies]
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ['F401']
